fix overflow layout in safari

--- a/css/style.css
+++ b/css/style.css
@@ -7903,7 +7903,7 @@ body.fp-responsive .fp-section {
       padding-right: 5px; }
       @media (min-width: 768px) {
         .homepage .section-clients .clients-list .client-wrapper {
-          width: 14.28%;
+          width: 14.25%;
           padding-left: 7.5px;
           padding-right: 7.5px; } }
     .homepage .section-clients .clients-list .col-md-3 {
